# actor-framework

./: CMakeLists.txt
generators/: CMakeLists.txt  caf-generate-enum-strings.cpp
libcaf_core/: CMakeLists.txt
libcaf_io/: CMakeLists.txt
